# modelpos

./: .gitignore  control.sh
.agent/rules/: modelpos.md
.cursor/rules/: 00-project-overview.md  01-backend-rules.md  02-ios-rules.md  03-detector-rules.md  04-feedbacker-rules.md  05-ble-protocol.md  06-coding-standards.md
backend/: .env  .env.example  modelpos.db  pyproject.toml
backend/admin/: dashboard.html  devices.html  index.html  users.html
backend/admin/css/: style.css
backend/admin/js/: api.js  app.js  auth.js
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: auth.py  devices.py  postures.py  router.py  users.py
backend/app/models/: __init__.py  base.py  device.py  posture_log.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  device.py  posture.py  user.py
backend/app/services/: __init__.py  auth.py  device_service.py  user_service.py
backend/scripts/: seed_devices.py
detector/debug/: index.html
detector/debug/css/: style.css
detector/debug/js/: app.js  ble-simulator.js  config.js  posture-detector.js
feedbacker/debug/: index.html
ios/: README.md
ios/ModelPos/: Info.plist  ModelPosApp.swift
ios/ModelPos.xcodeproj/: project.pbxproj
ios/ModelPos/App/: AppConfig.swift  AppState.swift  TokenStorage.swift
ios/ModelPos/Extensions/: Extensions.swift
ios/ModelPos/Models/: APIModels.swift  CachedModels.swift
ios/ModelPos/Services/: APIClient.swift  BluetoothService.swift  PostureMonitorService.swift
ios/ModelPos/Views/: RootView.swift
(+10 files in other folders)
